<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control_ros2</name>
  <version>1.0.0</version>
  <description>Generic motor control interface for ROS2 with MG6010 CAN motor controller support</description>

  <maintainer email="saurabh@todo.todo">saurabh</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core -->
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <!-- Message dependencies (actually used in source) -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <!-- Common utilities (json_logging.hpp) -->
  <depend>common_utils</depend>

  <!-- JSON serialization for structured logging -->
  <depend>nlohmann-json3-dev</depend>

  <!-- IDL types (extracted to motor_control_msgs for Tier 0 leaf builds) -->
  <depend>motor_control_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <!-- Launch/runtime dependency: hardware_interface.launch.py loads URDF from robot_description -->
  <exec_depend>robot_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
