<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_tuning</name>
  <version>0.1.0</version>
  <description>Motor config and PID tuning relay node for Pragati cotton-picking robot web dashboard</description>
  <maintainer email="udayakumar@example.com">Udayakumar</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>motor_control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
