<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_control</name>
  <version>2.0.0</version>
  <description>Advanced Vehicle Control System for Cotton Picker Robot</description>

  <maintainer email="support@example.com">Cotton Picker Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/example/cotton-picker</url>
  <url type="bugtracker">https://github.com/example/cotton-picker/issues</url>
  <url type="repository">https://github.com/example/cotton-picker</url>

  <author email="dev@example.com">Development Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>common_utils</build_depend>
  <exec_depend>common_utils</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Gazebo simulation dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>joy</depend>

  <!-- Dependencies for existing system integration -->
  <depend>motor_control_ros2</depend>
  <exec_depend>motor_control_msgs</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-pigpio</exec_depend>
  <exec_depend>python3-setproctitle</exec_depend>

  <!-- Enhanced testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-asyncio</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
